# fictional-sniffle

./: README.md
GrokAlg/JS/: search.js
GrokAlg/TS/: graph.ts  math.ts  search.ts  sort.ts
GrokAlg/cpp/: CMakeLists.txt
GrokAlg/cpp/src/: arrays.cpp  arrays.h  main.cpp  other.cpp  other.h  search.cpp  search.h  sort.cpp  sort.h
university/Diff/: CMakeLists.txt  ChartView.cpp  ChartView.h  Diff.cpp  Diff.h  MainWindow.cpp  MainWindow.h  main.cpp
university/NETLab1/: CMakeLists.txt  CMakeSettings.json
university/NETLab1/src/: main.cpp
university/NETLab1/src/listurl/: ListUrl.cpp  ListUrl.h
university/NETLab1/src/listurl/Url/: Url.cpp  Url.h
university/NETLab1/src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
university/NETLab1/src/parser/: Parser.cpp  Parser.h
university/NETLab1/src/reqhttp/: reqhttp.cpp  reqhttp.h
university/NETLab3/: pom.xml
university/car-sharing/: .env  .env.prod  build.sh  docker-compose.yml
university/car-sharing/consul-service/: consul.conf
university/car-sharing/nestjs-service/: Dockerfile  package-lock.json  package.json  tsconfig.build.json
university/car-sharing/nestjs-service/.devcontainer/: devcontainer.json
university/car-sharing/nginx-service/: nginx.conf
university/car-sharing/vue-service/: Dockerfile  README.md  package.json  vite.config.ts
university/colorit/: README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf  prod.sh  run.sh
university/colorit/colorization-service/: Dockerfile  app.py  main_model.py  model.py  requirements.txt
university/colorit/site/: .gitignore  Dockerfile  next.config.js  package-lock.json  package.json
university/colorit/site/app/: head.tsx  layout.tsx  page.tsx
university/colorit/site/components/: gallery-item.tsx  header.tsx  share-modal.tsx  theme-provider.tsx
university/colorit/user-service/: Dockerfile  package-lock.json  package.json  tsconfig.json  upload.controller.ts
university/db-manager/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
university/grafica/: Simestr3.sln
university/grafica/Lab3/: Form1.Designer.cs  Form1.cs  Form1.resx  Lab3.csproj
university/grafica/Lab5/: Camera.cs  Form1.Designer.cs  Form1.cs  Kinder.cs  Lab5.csproj  Sphere.cs
university/grafica/lab4/: Bmp.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Matr.cs  lab4.csproj
Веб разработка для начинаюзих Html и Css/html1/: index.html
Веб разработка для начинаюзих Html и Css/html2/: index.html
Веб разработка для начинаюзих Html и Css/html3/: index.html  style.css
Веб разработка для начинаюзих Html и Css/html4/: index.html  style.css
Веб разработка для начинаюзих Html и Css/html5/: index.html
Веб разработка для начинаюзих Html и Css/html6/: index.html  restaurant.html  style.css
(+117 files in other folders)
